# lex-align

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  index.html  lex-align_v2.2.md  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.adr-agent/: index.json
.adr-agent/decisions/: ADR-0001-uses-anthropic.md  ADR-0002-uses-click.md  ADR-0003-uses-pythonfrontmatter.md  ADR-0004-uses-pyyaml.md
.claude/: adr-agent-hook.py  settings.json  settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  release.yml
_drafts/: org-mode-auth.md
agent-support/: index.html
api/: index.html
dashboards/: index.html
docker/: Dockerfile  docker-compose.yml  registry.json
docs/: agent-support.md  api.md  dashboards.md  for-agents.md  getting-started.md  git-backed-approvals.md  index.md  llms.txt  roadmap.md  single-user-quickstart.md
for-agents/: index.html
getting-started/: index.html
git-backed-approvals/: index.html
org-mode-auth/: index.html
roadmap/: index.html
search/: search_index.json
single-user-quickstart/: index.html
src/adr_agent/: cli.py  report.py  settings.py
src/lex_align/: cli.py  compliance.py  hooks.py  licenses.py  models.py  reconciler.py  registry.py  report.py  session.py  settings.py  store.py
src/lex_align_client/: api.py  audit.py  claude_hooks.py  claudemd.py  cli.py  config.py  precommit.py  pyproject_utils.py  settings.py  status.py
src/lex_align_server/: audit.py  auth.py  cache.py  check_config.py  cli.py  config.py  cve.py  cve_scanner.py  evaluate.py  init.py  licenses.py  main.py  quickstart.py  registry.py  registry_schema.py  reloader.py  state.py
src/lex_align_server/_assets/: Dockerfile  README.md  __init__.py  docker-compose.yml  env.example  registry.example.yml
src/lex_align_server/api/v1/: approval_requests.py  evaluate.py  health.py  registry.py  reports.py
src/lex_align_server/authn/: __init__.py  anonymous.py  apikey.py  base.py  header.py  loader.py  webhook.py
src/lex_align_server/dashboards/: router.py
src/lex_align_server/dashboards/templates/: legal.html  registry.html  report.html  security.html
src/lex_align_server/proposer/: __init__.py  base.py  github.py  loader.py  local_file.py  local_git.py  log_only.py
tests/: conftest.py  test_cli.py  test_compile_registry.py  test_compliance.py  test_enforcement.py  test_hooks.py  test_licenses.py  test_models.py  test_reconciler.py  test_registry.py  test_report.py  test_session.py  test_settings.py  test_store.py
tests/client/: test_api.py  test_audit.py  test_claude_hooks.py  test_claudemd.py  test_cli.py  test_config.py  test_precommit.py  test_pyproject_utils.py  test_settings.py  test_status.py
tests/fixtures/: test_registry.yml
tests/server/: test_api.py  test_audit.py  test_authn.py  test_check_config.py  test_compile_registry.py  test_cve.py  test_cve_scanner.py  test_evaluate.py  test_licenses.py  test_proposer.py  test_quickstart.py  test_registry.py  test_reloader.py
tools/: compile_registry.py
