[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lex-align"
dynamic = ["version"]
description = "Enterprise legal and architectural alignment for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
]

[project.scripts]
lex-align = "lex_align.cli:main"

[tool.hatch.version]
path = "src/lex_align/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lex_align"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.12",
]
