[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lex-align"
dynamic = ["version"]
description = "Enterprise governance platform for AI-generated code: legal, security, and architectural alignment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
client = [
    "click>=8.0",
    "httpx>=0.27",
    "tomli-w>=1.0",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "redis>=5.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.0",
]

[project.scripts]
lex-align-client = "lex_align_client.cli:main"
lex-align-server = "lex_align_server.cli:main"

[tool.hatch.version]
path = "src/lex_align_client/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lex_align_client", "src/lex_align_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "fakeredis>=2.26",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "redis>=5.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.0",
    "tomli-w>=1.0",
]
