[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lex-align"
dynamic = ["version"]
description = "Enterprise governance platform for AI-generated code: legal, security, and architectural alignment"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "dlfelps", email = "dlfelps@gmail.com" },
]
keywords = [
    "ai",
    "governance",
    "compliance",
    "security",
    "license",
    "cve",
    "dependencies",
    "supply-chain",
    "claude",
    "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Legal Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/dlfelps/lex-align"
Documentation = "https://dlfelps.github.io/lex-align/"
Repository = "https://github.com/dlfelps/lex-align"
Issues = "https://github.com/dlfelps/lex-align/issues"

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "redis>=5.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.0",
]

[project.scripts]
lex-align-client = "lex_align_client.cli:main"
lex-align-server = "lex_align_server.cli:main"

[tool.hatch.version]
path = "src/lex_align_client/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lex_align_client", "src/lex_align_server"]

[tool.hatch.build.targets.sdist]
include = [
    "src/lex_align_client",
    "src/lex_align_server",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "tests",
    "docs",
    ".adr-agent",
    ".claude",
    ".devcontainer",
    ".github",
    "*.pdf",
    "*.png",
    "mkdocs.yml",
    "uv.lock",
    "adr-agent-v1.1.md",
    "lex-align_v2.2.md",
    "CLAUDE.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "fakeredis>=2.26",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "redis>=5.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.0",
    "tomli-w>=1.0",
]
